apps/staging/homepage/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-homepage-default
  namespace: homepage
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
          namespace: homepage
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-homepage
  namespace: homepage
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`homepage.hephlab.duckdns.org`) 
      kind: Rule
      services:
        - name: homepage
          port: 3000
          namespace: homepage
